Fixed overflow in display when typing in large quantities of numbers.

--- a/style.css
+++ b/style.css
@@ -109,4 +109,6 @@ body {
     color: white;
     font-size: 30px;
 
+    overflow: hidden;
+
 }
